--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,17 +8,16 @@ repository = "https://github.com/wvietor/ibkr-tws-api"
 keywords = ["trading", "interactive_brokers", "IBKR"]
 categories = ["finance"]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ibapi_derive = { version="0.1.0", path="src/ibkr_tws_api_derive" }
-tokio = { version = "1.32.0", features = ["full"] }
-tokio-util = { version = "0.7.9", features = ["full"] }
+ibapi_macros = { version="0.1.0", path= "../ibkr_rust_macros" }
+tokio = { version = "1.35.0", features = ["full"] }
+tokio-util = { version = "0.7.10", features = ["full"] }
 toml = "0.8.1"
-serde = { version = "1.0.188", features = ["derive"] }
+serde = { version = "1.0.193", features = ["derive"] }
 chrono = "0.4.31"
 crossbeam = "0.8.2"
 bytes = "1.5.0"
 anyhow = "1.0.75"
-itoa = "1.0.9"
-ryu = "1.0.15"
+itoa = "1.0.10"
+ryu = "1.0.16"
