--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ categories = ["finance"]
 
 
 [dependencies]
-ibapi_macros = { version="0.1.0", path= "../ibkr_rust_macros" }
+ibapi_macros = { version="0.1.0", path= "ibkr_rust_macros" }
 tokio = { version = "1.35.1", features = ["full"] }
 tokio-util = { version = "0.7.10", features = ["full"] }
 toml = "0.8.8"
