Added Timezone to client struct

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,4 @@ anyhow = "1.0.79"
 itoa = "1.0.10"
 ryu = "1.0.16"
 trait-variant = "0.1.1"
+chrono-tz = { version = "0.8.5", features = ["serde"] }
