--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,14 +11,14 @@ categories = ["finance"]
 
 [dependencies]
 ibapi_macros = { version="0.1.0", path= "ibkr_rust_macros" }
-tokio = { version = "1.35.1", features = ["full"] }
+tokio = { version = "1.36.0", features = ["full"] }
 tokio-util = { version = "0.7.10", features = ["full"] }
-toml = "0.8.8"
-serde = { version = "1.0.196", features = ["derive"] }
-chrono = "0.4.33"
+toml = "0.8.12"
+serde = { version = "1.0.197", features = ["derive"] }
+chrono = { version = "0.4.35", features = ["serde"] }
 crossbeam = "0.8.4"
 bytes = "1.5.0"
-anyhow = "1.0.79"
+anyhow = "1.0.81"
 itoa = "1.0.10"
-ryu = "1.0.16"
+ryu = "1.0.17"
 trait-variant = "0.1.1"
