--- a/.zed/tasks.json
+++ b/.zed/tasks.json
@@ -68,5 +68,13 @@
 		"use_new_terminal": false,
 		"allow_concurrent_runs": false,
 		"reveal": "always"
+	},
+	{
+		"label": "TEST IBKR_RUST SCANNER parse_xml",
+		"command": "RUSTFLAGS=-Awarnings cargo test -- --nocapture test_parse_xml",
+		// "env": { "foo": "bar" },
+		"use_new_terminal": false,
+		"allow_concurrent_runs": false,
+		"reveal": "always"
 	}
 ]
