--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ tokio = { version = "1.38.1", features = ["full"] }
 tokio-util = { version = "0.7.11", features = ["full"] }
 toml = "0.8.15"
 serde = { version = "1.0.204", features = ["derive"] }
+serde_json = "1.0.125"
 chrono = { version = "0.4.38", features = ["serde"] }
 crossbeam = "0.8.4"
 bytes = "1.6.1"
@@ -26,3 +27,5 @@ thiserror = "1.0.63"
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18" }
 tracing-test = { version = "0.2.5"} #features = ["no-env-filter"]
+quick-xml = {version = "0.36.1", features = ["async-tokio", "encoding"] }
+convert_case = "0.6.0"
