--- a/.zed/tasks.json
+++ b/.zed/tasks.json
@@ -71,7 +71,7 @@
 	},
 	{
 		"label": "TEST IBKR_RUST SCANNER parse_xml",
-		"command": "RUSTFLAGS=-Awarnings cargo test -- --nocapture test_parse_xml",
+		"command": "RUSTFLAGS=-Awarnings cargo test -- --nocapture test_gen_data_for_macros_input",
 		// "env": { "foo": "bar" },
 		"use_new_terminal": false,
 		"allow_concurrent_runs": false,
