--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ tokio = { version = "1.39.3", features = ["full"] }
 tokio-util = { version = "0.7.11", features = ["full"] }
 toml = "0.8.19"
 serde = { version = "1.0.208", features = ["derive"] }
+serde_json = "1.0.125"
 chrono = { version = "0.4.38", features = ["serde"] }
 crossbeam = "0.8.4"
 bytes = "1.7.1"
