refactoring, add req_scanner_subscription_once(), cancel_all_active_scanner_subscription()

--- a/.zed/tasks.json
+++ b/.zed/tasks.json
@@ -46,7 +46,7 @@
 	//
 
 	{
-		"label": "TEST IBKR_RUST ACCOUNT account_summary",
+		"label": "IBKR_RUST TEST ACCOUNT account_summary",
 		"command": "RUSTFLAGS=-Awarnings cargo test -- --nocapture account_summary",
 		// "env": { "foo": "bar" },
 		"use_new_terminal": false,
@@ -54,7 +54,7 @@
 		"reveal": "always"
 	},
 	{
-		"label": "TEST IBKR_RUST SCANNER test_req_scanner_parameters",
+		"label": "IBKR_RUST TEST SCANNER test_req_scanner_parameters",
 		"command": "RUSTFLAGS=-Awarnings cargo test -- --nocapture test_req_scanner_parameters",
 		// "env": { "foo": "bar" },
 		"use_new_terminal": false,
@@ -62,23 +62,23 @@
 		"reveal": "always"
 	},
 	{
-		"label": "RUN IBKR_RUST SCANNER scanner_test",
-		"command": "RUSTFLAGS=-Awarnings cargo run -p ibapi --bin scanner_test",
+		"label": "IBKR_RUST TEST SCANNER req_scanner_subscription_and_cancel",
+		"command": "RUSTFLAGS=-Awarnings cargo test -- --nocapture req_scanner_subscription_and_cancel_test",
 		// "env": { "foo": "bar" },
 		"use_new_terminal": false,
 		"allow_concurrent_runs": false,
 		"reveal": "always"
 	},
 	{
-		"label": "TEST IBKR_RUST SCANNER scanner_subscription",
-		"command": "RUSTFLAGS=-Awarnings cargo test -- --nocapture req_scanner_subscription_test",
+		"label": "IBKR_RUST TEST SCANNER req_scanner_subscription_once",
+		"command": "RUSTFLAGS=-Awarnings cargo test -- --nocapture req_scanner_subscription_once_test",
 		// "env": { "foo": "bar" },
 		"use_new_terminal": false,
 		"allow_concurrent_runs": false,
 		"reveal": "always"
 	},
 	{
-		"label": "TEST IBKR_RUST SCANNER parse_xml",
+		"label": "IBKR_RUST TEST SCANNER parse_xml",
 		"command": "RUSTFLAGS=-Awarnings cargo test -- --nocapture test_gen_data_for_macros_input",
 		// "env": { "foo": "bar" },
 		"use_new_terminal": false,
@@ -86,7 +86,7 @@
 		"reveal": "always"
 	},
 	{
-		"label": "TEST IBKR_RUST LIMITER limiter_50_rps",
+		"label": "IBKR_RUST TEST LIMITER limiter_50_rps",
 		"command": "RUSTFLAGS=-Awarnings cargo test -- --nocapture test_limiter_50_rps",
 		// "env": { "foo": "bar" },
 		"use_new_terminal": false,
@@ -94,5 +94,3 @@
 		"reveal": "always"
 	}
 ]
-
-//test_req_scanner_subscription
