--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,10 @@ categories = ["finance"]
 
 [dependencies]
 ibapi_macros = { version="0.1.0", path= "ibkr_rust_macros" }
-tokio = { version = "1.39.3", features = ["full"] }
-tokio-util = { version = "0.7.11", features = ["full"] }
+tokio = { version = "1.40.0", features = ["full"] }
+tokio-util = { version = "0.7.12", features = ["full"] }
 toml = "0.8.19"
-serde = { version = "1.0.209", features = ["derive"] }
+serde = { version = "1.0.210", features = ["derive"] }
 chrono = { version = "0.4.38", features = ["serde"] }
 chrono-tz = { version = "0.10.0" }
 crossbeam = "0.8.4"
@@ -23,3 +23,4 @@ itoa = "1.0.11"
 ryu = "1.0.18"
 trait-variant = "0.1.2"
 thiserror = "1.0.63"
+tracing = "0.1.40"
